--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ html {
     overflow-x: hidden;
 }
 
+html, body{
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 body {
     background: var(--bg-color);
     color: var(--text-color);
