--- a/style.css
+++ b/style.css
@@ -311,7 +311,7 @@ span {
     }
     81%,
     100%{
-        content: "Mahasiswa";
+        content: "Banking Student";
     }
 }
 @keyframes typing{
